--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ uploads/
 node_modules/
 
 __MACOSX/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
