--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 flake8 = "*"
+awsebcli = "*"
 
 [packages]
 django = "==2.2.5"
@@ -14,6 +15,7 @@ django-seed = "*"
 faker = "*"
 django-dotenv = "*"
 requests = "*"
+awsebcli = "*"
 
 [requires]
 python_version = "3.7"
