--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ faker = "*"
 django-dotenv = "*"
 requests = "*"
 awsebcli = "*"
+pipenv-to-requirements = "*"
 
 [requires]
 python_version = "3.7"
