--- a/requirements.txt
+++ b/requirements.txt
@@ -68,5 +68,7 @@ virtualenv-clone==0.5.4 ; python_version >= '2.7' and python_version not in '3.0
 virtualenv==20.1.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 wcwidth==0.1.9
 websocket-client==0.57.0
+psycopg==2.8.6
 zipp==3.4.0 ; python_version >= '3.6'
+
 
